# doc2embed

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
app/: __init__.py  main.py
app/api/: router.py
app/api/routes/: database.py  health.py
app/core/: __init__.py  config.py
app/db/: session.py
app/models/: __init__.py  document_segment.py
app/schemas/: database.py
app/services/: conversation_memory.py  document_export.py  llm.py
